# data-pipeline-pragma

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: logging.py  main.py  pipeline.py
src/db/: repository.py
src/etl/: __init__.py  extract.py  load.py  transform.py
src/stats/: recorder.py
