[tool.poetry]
name = "data-pipeline"
version = "0.1.0"
description = "A data pipeline to load, process, and store CSV data."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
sqlalchemy = "^1.4.0"
psycopg2 = "^2.9.0"  # or any other database driver you need
watchdog = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"